--- a/report.html
+++ b/report.html
@@ -1196,11 +1196,18 @@ async function generatePDF() { // <<< 1. Function ko ASYNC banaya gaya
                  return [
                      stop.group, stop.stopLocation, stop.timeString, stop.startTiming,
                      (stop.kilometer / 1000).toFixed(2),
-                     // 11 Speed Points Mapping
-                     stop.speedsBefore[0] || '0', stop.speedsBefore[1] || '0', stop.speedsBefore[2] || '0', 
-                     stop.speedsBefore[3] || '0', stop.speedsBefore[4] || '0', stop.speedsBefore[5] || '0', 
-                     stop.speedsBefore[6] || '0', stop.speedsBefore[7] || '0', stop.speedsBefore[8] || '0', 
-                     stop.speedsBefore[9] || '0', stop.speedsBefore[10] || '0',
+                     // 11 Speed Points Mapping (Values 0 to 10)
+                     stop.speedsBefore[0] ? parseFloat(stop.speedsBefore[0]).toFixed(0) : '0',
+                     stop.speedsBefore[1] ? parseFloat(stop.speedsBefore[1]).toFixed(0) : '0',
+                     stop.speedsBefore[2] ? parseFloat(stop.speedsBefore[2]).toFixed(0) : '0',
+                     stop.speedsBefore[3] ? parseFloat(stop.speedsBefore[3]).toFixed(0) : '0',
+                     stop.speedsBefore[4] ? parseFloat(stop.speedsBefore[4]).toFixed(0) : '0',
+                     stop.speedsBefore[5] ? parseFloat(stop.speedsBefore[5]).toFixed(0) : '0',
+                     stop.speedsBefore[6] ? parseFloat(stop.speedsBefore[6]).toFixed(0) : '0',
+                     stop.speedsBefore[7] ? parseFloat(stop.speedsBefore[7]).toFixed(0) : '0',
+                     stop.speedsBefore[8] ? parseFloat(stop.speedsBefore[8]).toFixed(0) : '0',
+                     stop.speedsBefore[9] ? parseFloat(stop.speedsBefore[9]).toFixed(0) : '0',
+                     stop.speedsBefore[10] ? parseFloat(stop.speedsBefore[10]).toFixed(0) : '0',
                      finalSystemAnalysis,
                      cliRemark
                  ];
